--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 body {
     font-family: sans-serif;
+    overflow-x: hidden;
 }
 
 /* navbar */
@@ -107,11 +108,35 @@ nav .logo h3 {
 
 /* Mobile */
 @media screen and (max-width: 576px) {
-    nav ul {
-        display: none;
-    }
+
+
+    /* nav {
+        justify-content: space-around;
+        height: 60px;
+    } */
 
     .menu-toggle {
         display: flex;
     }
+ 
+    nav ul {
+        position: absolute;
+        right: 0;
+        top:0;
+        width: 80%;
+        height: 100vh;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        background-color: black;
+        z-index: -1;
+        transform: translateX(100%);
+        transition: all 1s;
+    }
+
+    nav ul.slide {
+        transform: translateX(0);
+    }
+
+ 
 }
